# free-model-orchestrator-for-omniroute

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  backlog.md  completion.review  pyproject.toml  whitelist.py
.grill/: intelligence-inspector.md  smart-combo-reviewer-context.md
docs/: code-analysis.md  combo-grid-bootstrap.md
openspec/: AGENTS.md  TODO.md  done.md  project.md
openspec/changes/add-advisory-llm/: proposal.md  tasks.md
openspec/changes/add-allocation/: proposal.md  tasks.md
openspec/changes/add-auto-router-fallback-tail/: tasks.md
openspec/changes/add-auxiliary-slot-consumers/: tasks.md
openspec/changes/add-discovery/: proposal.md  tasks.md
openspec/changes/add-forecast-driven-quality-band/: proposal.md  tasks.md
openspec/changes/add-foundation/: completion.review.md  proposal.md  tasks.md
openspec/changes/add-instructor-runtime-adapter/: proposal.md  tasks.md
openspec/changes/add-intelligence-inspector/: design.md  proposal.md  tasks.md
openspec/changes/add-live-quota-ingestion/: tasks.md
openspec/changes/add-omniroute-account-ingestion/: proposal.md  tasks.md
openspec/changes/add-omniroute-catalog-ingestion/: completion.review.md  tasks.md
openspec/changes/add-omniroute-free-registry-ingestion/: completion.review.md  tasks.md
openspec/changes/add-persistence-repositories/: proposal.md  tasks.md
openspec/changes/add-pipeline-orchestration/: tasks.md
openspec/changes/add-profile-combo-normalization/: design.md  tasks.md
openspec/changes/add-quota/: proposal.md  tasks.md
openspec/changes/add-quota-research-ingestion/: proposal.md  tasks.md
openspec/changes/add-real-source-ingestion-tests/: completion.review.md  proposal.md
openspec/changes/add-role-lifecycle/: tasks.md
openspec/changes/add-rollback-idempotency/: tasks.md
openspec/changes/add-runtime-bootstrap-and-locks/: tasks.md
openspec/changes/add-scoring/: proposal.md  tasks.md
openspec/changes/add-telemetry-ingestion/: tasks.md
openspec/changes/add-web-cookie-acquisition/: proposal.md  tasks.md
openspec/changes/add-web-cookie-and-cli/: tasks.md
openspec/changes/add-weekly-tpr-recalibration/: tasks.md
openspec/changes/align-docs-with-runtime/: proposal.md  tasks.md
openspec/changes/compose-production-pipeline/: tasks.md
openspec/changes/derive-apply-preconditions/: proposal.md  tasks.md
openspec/changes/finish-hermes-inventory-adapters/: tasks.md
openspec/changes/fix-cli-dry-run-pipeline-preview/: tasks.md
openspec/changes/harden-omniroute-retry-and-idempotency/: tasks.md
openspec/changes/harden-pipeline-resilience/: proposal.md  tasks.md
openspec/changes/integrate-quality-and-context-gates/: proposal.md  tasks.md
openspec/changes/make-multi-combo-apply-atomic/: tasks.md
openspec/changes/persist-metadata-sync/: tasks.md
openspec/changes/refactor-collapse-stage-helper-aliases/: proposal.md  tasks.md
openspec/changes/refactor-composition-into-stage-modules/: proposal.md  tasks.md
openspec/changes/refactor-drain-stages-apply/: tasks.md
openspec/changes/refactor-drain-stages-runtime/: tasks.md
openspec/changes/refactor-extract-test-fakes/: tasks.md
openspec/changes/refactor-split-persistence/: proposal.md  tasks.md
openspec/changes/refactor-split-stages-apply/: tasks.md
openspec/changes/refactor-split-stages-discovery/: proposal.md  tasks.md
openspec/changes/refactor-split-stages-runtime/: proposal.md  tasks.md
openspec/changes/refactor-unify-shared-helpers/: tasks.md
openspec/changes/register-new-free-models-in-omniroute/: proposal.md  tasks.md
openspec/changes/remove-fmo-allocation-apply/: proposal.md  tasks.md
openspec/changes/remove-fmo-matching-probing/: tasks.md
openspec/changes/remove-fmo-quota/: tasks.md
openspec/changes/rollback-apply-to-live-baseline/: tasks.md
openspec/changes/route-rollback-command-to-combo-revert/: tasks.md
reference/: .env.example  CHANGELOG.md  README.md  SOURCES.md
reference/config/: config.example.yaml
reference/db/: schema.sql
reference/fixtures/: fmo-pools-v1-generation.json  omniroute-capture-playbook.md
reference/legacy/: spec-v2.4.md
reference/prompts/: aa-index-migration.md  hermes-inspector.md  hermes-intelligence-inspector.md  quota-research.md  smart-combo-reviewer.md
reference/schemas/: quota-rule.schema.json
reference/tests/: test-plan.md
src/fmo/: __init__.py  aa_index_runtime.py  aa_migration.py  access.py  access_state.py  accounts.py  allocation.py  applier.py  apply_guard.py  artificial_analysis.py  audit.py  bootstrap.py  candidates.py  cli.py  combo_reader.py  composition.py  composition_contracts.py  composition_stages.py  config.py  context.py  db.py  external_metadata.py  forecast.py  hermes_inventory.py  idempotency.py  llm_runtime.py  matcher.py  metadata_sync.py  model_registration.py  models_dev.py  omniroute.py  persistence.py  pipeline.py  pool_publisher.py  probes.py  profile_normalization.py  provider_sweep.py  quality.py  quota_attribution.py  quota_manager.py  (+12 more)
tests/: _clients.py  _composition_support.py  _fixtures.py  _stage_effects.py  conftest.py  spec_coverage_pending.txt  test_advisory.py  test_allocation.py  test_apply_request_window_reset_horizon.py  test_bootstrap.py  test_cli.py  test_composition.py  test_composition_access.py  test_composition_apply.py  test_composition_discovery.py  test_composition_quota.py  test_composition_runtime.py  test_discovery.py  test_e2e_simulated.py  test_external_metadata.py  test_foundation.py  test_hermes_inventory_real_shapes.py  test_instructor_runtime_adapter.py  test_intelligence_inspector.py  test_live_external_sources.py  test_live_quota_ingestion.py  test_metadata_sync.py  test_model_registration.py  test_omniroute_account_ingestion.py  test_omniroute_catalog_ingestion.py  test_omniroute_fixture_ingestion.py  test_omniroute_free_registry_ingestion.py  test_persistence.py  test_pipeline.py  test_pool_publisher.py  test_probing_new_candidates.py  test_profile_normalization.py  test_provider_sweep.py  test_quota.py  test_quota_normalize.py  (+12 more)
(+591 files in other folders)
