[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "free-model-orchestrator"
version = "0.1.0"
description = "Free model orchestrator for OmniRoute"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27",
  "instructor>=1.6",
  "openai>=1.0",
  "pydantic>=2",
  "pyyaml>=6",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
  "psycopg[binary]>=3",
]

[project.scripts]
free-model-orchestrator = "fmo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "live: hits real external services (models.dev / Artificial Analysis); skips when unavailable",
  "spec(scenario_id): bind this test to an openspec scenario, id 'capability::Scenario name'",
]
