[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "free-model-orchestrator"
version = "0.1.0"
description = "Free model orchestrator for OmniRoute"
requires-python = ">=3.12"
# Pinned to the versions the test suite is validated against. Upper bounds lock
# the next breaking release (instructor/openai churn their minor/major often);
# patch updates within the band stay allowed. Bump deliberately, then re-run pytest.
dependencies = [
  "httpx>=0.28.1,<0.29",
  "instructor>=1.15.3,<1.16",
  "openai>=2.43.0,<3",
  "pydantic>=2.13.4,<3",
  "pyyaml>=6.0.3,<7",
]

[project.optional-dependencies]
test = [
  "pytest>=9.1.0,<10",
  "psycopg[binary]>=3.3.4,<3.4",
]

[project.scripts]
free-model-orchestrator = "fmo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "live: hits real external services (models.dev / Artificial Analysis); skips when unavailable",
  "spec(scenario_id): bind this test to an openspec scenario, id 'capability::Scenario name'",
]
